--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -192,6 +192,12 @@ input {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-radius: 0;
+}
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
