--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -4,12 +4,20 @@ form {
   max-width:80%;
 }
 
-h1, h2 {
+h1, h2, h3 {
    text-align: center;
 }
 
 input {
   padding: 30px;
+}
+
+.navbar-brand {
+  font-family: 'Raleway', sans-serif;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
 }
 
 #openApps {
