--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -90,6 +90,7 @@ col {
   padding: 15px;
   font-size: large;
   overflow: hidden;
+  background-color: #FFFFE7;
 }
 
 #search-one {
@@ -108,6 +109,7 @@ col {
   float: left;
   display: block;
   padding: 15px;
+  background-color: #FFFFF3;
 }
 
 #list-item {
