style(style.css):

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -20,6 +20,19 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+
+#btn-info {
+  background-color: #7cc5dd;
+  border-style: none;
+
+}
+
+#btn-primary {
+  background-color: #6076a3;
+  border-style: none;
+
+}
+
 #openApps {
   padding-top: 20px
 }
@@ -76,21 +89,18 @@ col {
 }
 
 #card {
-  border-style: solid;
-  border-color: gray;
-  border-width: 1px;
   border-radius: 5px;
   width: 300px;
   height: 450px;
-  font: 10px helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   margin: 20px 20px 0 20px;
   float: left;
   display: inline-block;
   line-break: auto;
   padding: 15px;
-  font-size: large;
+  font-size: medium;
   overflow: hidden;
-  background-color: #FFFFE7;
+  background-color: #edfaff;
 }
 
 #search-one {
@@ -99,17 +109,16 @@ col {
 }
 
 .add-stage {
-  border-style: solid;
-  border-color: gray;
-  border-width: 1px;
   border-radius: 5px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: medium;
   width: 300px;
   height: 450px;
   margin: 20px 20px 0 20px;
   float: left;
   display: block;
   padding: 15px;
-  background-color: #FFFFF3;
+  background-color: #edfaff;
 }
 
 #list-item {
